--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 WaniKani TabiTabi
 
+[ ] Migrate config page hosting to github pages.
 [ ] Implement lovely fctx rendering.  Fallback to system rendering on aplite
     (for memory and text quality).
 [ ] Implement a round layout.
