--- a/TODO
+++ b/TODO
@@ -1,5 +1,8 @@
 WaniKani TabiTabi
 
-[ ] Implement lovely fctx rendering.  Fallback to system rendering on aplite
-    (for memory and text quality).
+[o] Remove durations from all pins.  It makes a mess of the timeline.
+[ ] Roll-in the pebble-app-ready-service dependency, since that package is not easily available from npm.
+[ ] Fix the loading screen content and format.
+[o] Use a readable color scheme on aplite and diorite.
+[ ] Use a readable round layout on chalk.
 [ ] With the 'no api key' error message, include some intro language for first time users.
