--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 WaniKani TabiTabi
 
+[o] Review the job queue and sequence and debug logging.
 [o] Remove durations from all pins.  It makes a mess of the timeline.
 [o] Roll-in the pebble-app-ready-service dependency, since that package is not easily available from npm.
 [o] Fix the loading screen content and format.
